Fix z-index of message container

--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -5703,14 +5703,14 @@ figcaption {
   margin: 0 auto;
   position: fixed;
   top: 0;
-  width: 100%;
-  z-index: 1000; }
+  width: 100%; }
 
 .messages__message {
   text-align: center;
   -webkit-animation: scale-up 0.25s;
   animation: scale-up 0.25s;
   margin-bottom: 0;
-  position: relative; }
+  position: relative;
+  z-index: 1000; }
 
 /*# sourceMappingURL=main.css.map */
